--- a/projects/rhythmEcho.html
+++ b/projects/rhythmEcho.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body class="brokenStage">
+<body class="rhythmEcho">
 
 <nav class="nav">
 
