--- a/projects/brokenStage.html
+++ b/projects/brokenStage.html
@@ -41,6 +41,10 @@
     <p>2D short puzzle game developed with Unity</p>
 </header>
 
+<div class="gallery">
+    <img src="../assets/img/2-1.jpg" alt="Broken Stage image one">
+</div>
+
 <div class="video-responsive">
     <iframe width="560" height="315" 
         src="https://www.youtube.com/embed/TK18FpEI-G8?si=h5cSBuv7m850TArd"
@@ -50,8 +54,6 @@
 </div>
 
 <div class="gallery">
-    <!-- Replace with your images -->
-    <img src="../assets/img/2-1.jpg" alt="Broken Stage image one">
     <img src="../assets/img/2-2.jpg" alt="Broken Stage image two">
     <img src="../assets/img/2-3.jpg" alt="Broken Stage image three">
     <img src="../assets/img/2-4.jpg" alt="Broken Stage image four">
