--- a/projects/riverOfForgetting.html
+++ b/projects/riverOfForgetting.html
@@ -41,6 +41,10 @@
     <p>3D short cooking game developed with Unity</p>
 </header>
 
+<div class="gallery">
+    <img src="../assets/img/3-1.jpg" alt="River of Forgetting image one">
+</div>
+
 <div class="video-responsive">
     <iframe width="560" height="315"
         src="https://www.youtube.com/embed/PhgodEf7-8c?si=8qwDHehtTLFIViyD"
@@ -50,8 +54,6 @@
 </div>
 
 <div class="gallery">
-    <!-- Replace with your images -->
-    <img src="../assets/img/3-1.jpg" alt="River of Forgetting image one">
     <img src="../assets/img/3-2.jpg" alt="River of Forgetting image two">
     <img src="../assets/img/3-3.jpg" alt="River of Forgetting image three">
     <img src="../assets/img/3-4.jpg" alt="River of Forgetting image four">
