--- a/projects/theFeeding.html
+++ b/projects/theFeeding.html
@@ -41,6 +41,10 @@
     <p>3D short film developed with Unreal Engine 5.6</p>
 </header>
 
+<div class="gallery">
+    <img src="../assets/img/1-1.jpg" alt="The Feeding image one">
+</div>
+
 <div class="video-responsive">
     <iframe width="560" height="315"
         src="https://www.youtube.com/embed/_LaT0FU4JkQ?si=18w5ZZOPvDGmLTWW"
@@ -50,7 +54,6 @@
 </div>
 
 <div class="gallery">
-    <img src="../assets/img/1-1.jpg" alt="The Feeding image one">
     <img src="../assets/img/1-2.jpg" alt="The Feeding image two">
     <img src="../assets/img/1-3.jpg" alt="The Feeding image three">
     <img src="../assets/img/1-4.jpg" alt="The Feeding image four">
