--- a/projects/brokenStage.html
+++ b/projects/brokenStage.html
@@ -39,6 +39,7 @@
 <header class="header">
     <h1>Broken Stage</h1>
     <p>2D short puzzle game developed with Unity</p>
+    <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/broken-stage">Broken Stage at itch.io</a></p>
 </header>
 
 <div class="gallery">
