--- a/projects/puppetMystery.html
+++ b/projects/puppetMystery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Broken Stage</title>
+    <title>Puppet Mystery</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
@@ -39,7 +39,8 @@
 <header class="header">
     <h1>Puppet Mystery</h1>
     <p>2D short puzzle game developed with Unity</p>
-    <p>Role: Producer, Lead Developer, Level Designer</p>
+    <p><em>Role: Producer, Lead Developer, Level Designer</em></p>
+    <p><b>Download the Demo:</b> <a href="https://yollienarae.itch.io/puppetmystery">Puppet Mystery at itch.io</a></p>
 </header>
 
 <div class="video-responsive">
