--- a/projects/rhythmEcho.html
+++ b/projects/rhythmEcho.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Broken Stage</title>
+    <title>Rhythm</title>
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
@@ -39,7 +39,8 @@
 <header class="header">
     <h1>Rhythm: Echo of the Disciple</h1>
     <p>3D rhythm and puzzle game developed with Unreal Engine 5.6</p>
-    <p>Role: Producer, Developer</p>
+    <p><em>Role: Producer, Developer</em></p>
+    <p><b>Download the Demo:</b> <a href="https://yollienarae.itch.io/rhythmechoofthedisciple">Rhythm: Echo of the Disciple at itch.io</a></p>
 </header>
 
 <div class="gallery">
