--- a/projects/riverOfForgetting.html
+++ b/projects/riverOfForgetting.html
@@ -39,6 +39,7 @@
 <header class="header">
     <h1>River of Forgetting</h1>
     <p>3D short cooking game developed with Unity</p>
+    <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/river-of-forgetting">River of Forgetting at itch.io</a></p>
 </header>
 
 <div class="gallery">
