--- a/projects/puppetMystery.html
+++ b/projects/puppetMystery.html
@@ -40,7 +40,7 @@
     <h1>Puppet Mystery</h1>
     <p>2D short puzzle game developed with Unity</p>
     <p><em>Role: Producer, Lead Developer, Level Designer</em></p>
-    <p><b>Download the Demo:</b> <a href="https://yollienarae.itch.io/puppetmystery">Puppet Mystery at itch.io</a></p>
+    <p><b>Try the Game:</b> <a href="https://yollienarae.itch.io/puppetmystery">Puppet Mystery at itch.io</a></p>
 </header>
 
 <div class="video-responsive">
