--- a/projects/rhythmEcho.html
+++ b/projects/rhythmEcho.html
@@ -40,7 +40,7 @@
     <h1>Rhythm: Echo of the Disciple</h1>
     <p>3D rhythm and puzzle game developed with Unreal Engine 5.6</p>
     <p><em>Role: Producer, Developer</em></p>
-    <p><b>Download the Demo:</b> <a href="https://yollienarae.itch.io/rhythmechoofthedisciple">Rhythm: Echo of the Disciple at itch.io</a></p>
+    <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/rhythmechoofthedisciple">Rhythm: Echo of the Disciple at itch.io</a></p>
 </header>
 
 <div class="gallery">
