--- a/index.html
+++ b/index.html
@@ -37,68 +37,71 @@
 
     </nav>
 
-    <!-- HEADER -->
-    <header class="header">
-        <h1>About</h1>
-        <p>Hi there, welcome to Yolanda's game lab!</p>
+    <!-- HERO SECTION -->
+    <header class="hero-section">
+        <div class="hero-text">
+            <h1>Hi there...</h1>
+            <p>Welcome to Yolanda's game lab!</p>
+        </div>
     </header>
 
-    <!-- ABOUT CONTENT (RESPONSIVE LAYOUT) -->
-    <main>
-
-        <div class="about-wrapper">
-
-            <!-- PROFILE IMAGE -->
-            <div class="about-photo-container">
-                <img src="assets/img/profile.PNG" 
-                     alt="Portrait of Yolanda"
-                     class="about-photo">
-            </div>
-
-            <!-- TEXT COLUMN -->
-            <div class="about-text">
-
+    <!-- PROFILE SECTION -->
+    <section id="profile" class="profile-section">
+        <div class="container">
+            <img src="assets/img/profile.PNG" alt="Portrait of Yolanda" class="profile-pic">
+            <div class="profile-text">
                 <h2>Introduction</h2>
-
                 <p>
                     I am Yolanda, an undergraduate student in Communications and New Media at the National University of Singapore.
                     My academic journey is shaped by a deep interest in game studies and game development, especially in understanding
                     how interactive media can influence the way people think, feel, and connect with the world around them.
                 </p>
-
                 <p>
                     I believe that games hold powerful potential as a creative medium. They offer unique ways to tell stories,
                     spark meaningful conversations, and encourage players to reflect on social issues. With this in mind, I hope
                     to create experiences that weave cultural heritage into thoughtful and engaging gameplay.
                 </p>
-
                 <p>
                     My work is driven by curiosity and a desire to explore how digital media can preserve traditions, share diverse
                     perspectives, and inspire communities. I am continually learning, experimenting, and collaborating to understand
                     how design, technology, and storytelling can come together to create impact.
                 </p>
-
-                <h2>Curriculum Vitae</h2>
-                <p>
-                    <a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing"
-                       target="_blank" rel="noopener noreferrer">
-                        View my CV (As of November 2025)
-                    </a>
-                </p>
-
-                <h2>Contact</h2>
-                <p><b>Email:</b> <a href="mailto:yolandaliuxy@outlook.com">yolandaliuxy@outlook.com</a></p>
-                <p><b>LinkedIn:</b> 
-                    <a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank">
-                        linkedin.com/in/liu-xingyan-yolanda6
-                    </a>
-                </p>
-
             </div>
-
         </div>
+    </section>
 
-    </main>
+    <!-- LINKS SECTION -->
+    <section id="links" class="links-section">
+        <div class="container">
+            <h2>Projects & Contact</h2>
+            <div class="links-container">
+                <div class="link-category">
+                    <h3>Independent Projects</h3>
+                    <ul>
+                        <li><a href="projects/theFeeding.html">The Feeding</a></li>
+                        <li><a href="projects/brokenStage.html">Broken Stage</a></li>
+                        <li><a href="projects/riverOfForgetting.html">River of Forgetting</a></li>
+                        <li><a href="projects/travelTrove.html">Travel Trove</a></li>
+                    </ul>
+                </div>
+                <div class="link-category">
+                    <h3>Group Projects</h3>
+                    <ul>
+                        <li><a href="projects/rhythmEcho.html">Rhythm: Echo of the Disciple</a></li>
+                        <li><a href="projects/puppetMystery.html">Puppet Mystery</a></li>
+                    </ul>
+                </div>
+                <div class="link-category">
+                    <h3>Contact & CV</h3>
+                    <ul>
+                        <li><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my CV</a></li>
+                        <li><a href="mailto:yolandaliuxy@outlook.com">Email</a></li>
+                        <li><a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank">LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- DROPDOWN CLICK LOGIC -->
     <script>
