--- a/projects/brokenStage.html
+++ b/projects/brokenStage.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body class="brokenStage">
+<body class="project-page brokenStage">
 
 <nav class="nav">
-
     <!-- ABOUT -->
     <a href="../index.html">About</a>
-
     <!-- INDEPENDENT PROJECTS -->
     <div class="dropdown">
         <button class="dropbutton dropdown-toggle">Independent Projects</button>
@@ -24,7 +22,6 @@
             <a href="travelTrove.html">Travel Trove</a>
         </div>
     </div>
-
     <!-- GROUP PROJECTS -->
     <div class="dropdown">
         <button class="dropbutton dropdown-toggle">Group Projects</button>
@@ -33,32 +30,37 @@
             <a href="puppetMystery.html">Puppet Mystery</a>
         </div>
     </div>
-
 </nav>
 
 <header class="header">
-    <h1>Broken Stage</h1>
-    <p>2D short puzzle game developed with Unity</p>
-    <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/broken-stage">Broken Stage at itch.io</a></p>
+    <div class="container">
+        <h1>Broken Stage</h1>
+        <p>2D short puzzle game developed with Unity</p>
+        <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/broken-stage">Broken Stage at itch.io</a></p>
+    </div>
 </header>
 
-<div class="gallery">
-    <img src="../assets/img/2-1.jpg" alt="Broken Stage image one">
-</div>
+<main>
+    <div class="container">
+        <div class="gallery">
+            <img src="../assets/img/2-1.jpg" alt="Broken Stage image one">
+        </div>
 
-<div class="video-responsive">
-    <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/TK18FpEI-G8?si=h5cSBuv7m850TArd"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+        <div class="video-responsive">
+            <iframe width="560" height="315" 
+                src="https://www.youtube.com/embed/TK18FpEI-G8?si=h5cSBuv7m850TArd"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
 
-<div class="gallery">
-    <img src="../assets/img/2-2.jpg" alt="Broken Stage image two">
-    <img src="../assets/img/2-3.jpg" alt="Broken Stage image three">
-    <img src="../assets/img/2-4.jpg" alt="Broken Stage image four">
-</div>
+        <div class="gallery">
+            <img src="../assets/img/2-2.jpg" alt="Broken Stage image two">
+            <img src="../assets/img/2-3.jpg" alt="Broken Stage image three">
+            <img src="../assets/img/2-4.jpg" alt="Broken Stage image four">
+        </div>
+    </div>
+</main>
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
@@ -68,7 +70,6 @@ document.addEventListener("DOMContentLoaded", function () {
     dropdowns.forEach(drop => {
         const button = drop.querySelector(".dropbutton");
 
-        // Toggle dropdown on click
         button.addEventListener("click", function (event) {
             event.stopPropagation();
             closeAllDropdowns();
@@ -76,7 +77,6 @@ document.addEventListener("DOMContentLoaded", function () {
         });
     });
 
-    // Click anywhere outside closes ALL dropdowns
     document.addEventListener("click", function () {
         closeAllDropdowns();
     });
