--- a/projects/rhythmEcho.html
+++ b/projects/rhythmEcho.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body class="rhythmEcho">
+<body class="project-page rhythmEcho">
 
 <nav class="nav">
-
     <!-- ABOUT -->
     <a href="../index.html">About</a>
-
     <!-- INDEPENDENT PROJECTS -->
     <div class="dropdown">
         <button class="dropbutton dropdown-toggle">Independent Projects</button>
@@ -24,7 +22,6 @@
             <a href="travelTrove.html">Travel Trove</a>
         </div>
     </div>
-
     <!-- GROUP PROJECTS -->
     <div class="dropdown">
         <button class="dropbutton dropdown-toggle">Group Projects</button>
@@ -33,23 +30,28 @@
             <a href="puppetMystery.html">Puppet Mystery</a>
         </div>
     </div>
-
 </nav>
 
 <header class="header">
-    <h1>Rhythm: Echo of the Disciple</h1>
-    <p>3D rhythm and puzzle game developed with Unreal Engine 5.6</p>
-    <p><em>Role: Producer, Developer</em></p>
-    <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/rhythmechoofthedisciple">Rhythm: Echo of the Disciple at itch.io</a></p>
+    <div class="container">
+        <h1>Rhythm: Echo of the Disciple</h1>
+        <p>3D rhythm and puzzle game developed with Unreal Engine 5.6</p>
+        <p><em>Role: Producer, Developer</em></p>
+        <p><b>Download the Game:</b> <a href="https://yollienarae.itch.io/rhythmechoofthedisciple">Rhythm: Echo of the Disciple at itch.io</a></p>
+    </div>
 </header>
 
-<div class="gallery">
-    <img src="../assets/img/5-1.png" alt="rhythmEcho image one">
-</div>
+<main>
+    <div class="container">
+        <div class="gallery">
+            <img src="../assets/img/5-1.png" alt="rhythmEcho image one">
+        </div>
 
-<div class="video-responsive">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/724kNPAQR84?si=4rk2hNCHsXyiigkD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+        <div class="video-responsive">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/724kNPAQR84?si=4rk2hNCHsXyiigkD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </div>
+</main>
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
@@ -59,7 +61,6 @@ document.addEventListener("DOMContentLoaded", function () {
     dropdowns.forEach(drop => {
         const button = drop.querySelector(".dropbutton");
 
-        // Toggle dropdown on click
         button.addEventListener("click", function (event) {
             event.stopPropagation();
             closeAllDropdowns();
@@ -67,7 +68,6 @@ document.addEventListener("DOMContentLoaded", function () {
         });
     });
 
-    // Click anywhere outside closes ALL dropdowns
     document.addEventListener("click", function () {
         closeAllDropdowns();
     });
@@ -79,4 +79,4 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 </body>
-</html
+</html>
