--- a/projects/theFeeding.html
+++ b/projects/theFeeding.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
-<body class="theFeeding">
+<body class="project-page theFeeding">
 
 <nav class="nav">
-
     <!-- ABOUT -->
     <a href="../index.html">About</a>
-
     <!-- INDEPENDENT PROJECTS -->
     <div class="dropdown">
         <button class="dropbutton dropdown-toggle">Independent Projects</button>
@@ -24,7 +22,6 @@
             <a href="travelTrove.html">Travel Trove</a>
         </div>
     </div>
-
     <!-- GROUP PROJECTS -->
     <div class="dropdown">
         <button class="dropbutton dropdown-toggle">Group Projects</button>
@@ -33,35 +30,40 @@
             <a href="puppetMystery.html">Puppet Mystery</a>
         </div>
     </div>
-
 </nav>
 
 <header class="header">
-    <h1>The Feeding</h1>
-    <p>3D short film developed with Unreal Engine 5.6</p>
+    <div class="container">
+        <h1>The Feeding</h1>
+        <p>3D short film developed with Unreal Engine 5.6</p>
+    </div>
 </header>
 
-<div class="gallery">
-    <img src="../assets/img/1-1.jpg" alt="The Feeding image one">
-</div>
+<main>
+    <div class="container">
+        <div class="gallery">
+            <img src="../assets/img/1-1.jpg" alt="The Feeding image one">
+        </div>
 
-<div class="video-responsive">
-    <iframe width="560" height="315"
-        src="https://www.youtube.com/embed/_LaT0FU4JkQ?si=18w5ZZOPvDGmLTWW"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</div>
+        <div class="video-responsive">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/_LaT0FU4JkQ?si=18w5ZZOPvDGmLTWW"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
 
-<div class="gallery">
-    <img src="../assets/img/1-2.jpg" alt="The Feeding image two">
-    <img src="../assets/img/1-3.jpg" alt="The Feeding image three">
-    <img src="../assets/img/1-4.jpg" alt="The Feeding image four">
-    <img src="../assets/img/1-5.jpg" alt="The Feeding image five">
-    <img src="../assets/img/1-6.jpg" alt="The Feeding image six">
-    <img src="../assets/img/1-7.jpg" alt="The Feeding image seven">
-    <img src="../assets/img/1-8.jpg" alt="The Feeding image eight">
-</div>
+        <div class="gallery">
+            <img src="../assets/img/1-2.jpg" alt="The Feeding image two">
+            <img src="../assets/img/1-3.jpg" alt="The Feeding image three">
+            <img src="../assets/img/1-4.jpg" alt="The Feeding image four">
+            <img src="../assets/img/1-5.jpg" alt="The Feeding image five">
+            <img src="../assets/img/1-6.jpg" alt="The Feeding image six">
+            <img src="../assets/img/1-7.jpg" alt="The Feeding image seven">
+            <img src="../assets/img/1-8.jpg" alt="The Feeding image eight">
+        </div>
+    </div>
+</main>
 
 <script>
 document.addEventListener("DOMContentLoaded", function () {
@@ -71,7 +73,6 @@ document.addEventListener("DOMContentLoaded", function () {
     dropdowns.forEach(drop => {
         const button = drop.querySelector(".dropbutton");
 
-        // Toggle dropdown on click
         button.addEventListener("click", function (event) {
             event.stopPropagation();
             closeAllDropdowns();
@@ -79,7 +80,6 @@ document.addEventListener("DOMContentLoaded", function () {
         });
     });
 
-    // Click anywhere outside closes ALL dropdowns
     document.addEventListener("click", function () {
         closeAllDropdowns();
     });
