Theme color & Interaction Refinement

--- a/projects/travelTrove.html
+++ b/projects/travelTrove.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel Trove</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/cursor.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body class="project-page travelTrove">
@@ -41,9 +43,12 @@
 
 <main>
     <div class="container">
+        <div class="cover-image">
+            <img src="../assets/img/4-1.jpg" alt="Travel Trove image one">
+        </div>
+        <p>Click to view in details</p>
         <div class="gallery">
             <!-- Replace with your images -->
-            <img src="../assets/img/4-1.jpg" alt="Travel Trove image one">
             <img src="../assets/img/4-2.jpg" alt="Travel Trove image two">
             <img src="../assets/img/4-3.jpg" alt="Travel Trove image three">
             <img src="../assets/img/4-4.jpg" alt="Travel Trove image four">
@@ -79,5 +84,15 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 
+    <footer class="footer">
+        <p>&copy; 2025 Yolanda Liu | All Rights Reserved</p>
+        <p><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
+        <p class="contact-text">Contact</p>
+        <div class="footer-social">
+            <a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:yolandaliuxy@outlook.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+        </div>
+    </footer>
+<script src="../assets/js/main.js"></script>
 </body>
 </html>
