--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yolanda's Game Lab</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/cursor.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         .profile-section, .links-section {
             opacity: 0;
@@ -121,38 +123,6 @@
                 </div>
             </section>
 
-            <!-- LINKS SECTION -->
-            <section id="links" class="links-section">
-                <div class="container">
-                    <h2>Projects & Contact</h2>
-                    <div class="links-container">
-                        <div class="link-category">
-                            <h3>Independent Projects</h3>
-                            <ul>
-                                <li><a href="projects/theFeeding.html">The Feeding</a></li>
-                                <li><a href="projects/brokenStage.html">Broken Stage</a></li>
-                                <li><a href="projects/riverOfForgetting.html">River of Forgetting</a></li>
-                                <li><a href="projects/travelTrove.html">Travel Trove</a></li>
-                            </ul>
-                        </div>
-                        <div class="link-category">
-                            <h3>Group Projects</h3>
-                            <ul>
-                                <li><a href="projects/rhythmEcho.html">Rhythm: Echo of the Disciple</a></li>
-                                <li><a href="projects/puppetMystery.html">Puppet Mystery</a></li>
-                            </ul>
-                        </div>
-                        <div class="link-category">
-                            <h3>Contact & CV</h3>
-                            <ul>
-                                <li><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my CV</a></li>
-                                <li><a href="mailto:yolandaliuxy@outlook.com">Email</a></li>
-                                <li><a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank">LinkedIn</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </section>
         </div>
     </div>
 
@@ -204,5 +174,15 @@
     });
     </script>
 
+    <footer class="footer">
+        <p>&copy; 2025 Yolanda Liu | All Rights Reserved</p>
+        <p class="contact-text"><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
+        <p class="contact-text">Contact</p>
+        <div class="footer-social">
+            <a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:yolandaliuxy@outlook.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+        </div>
+    </footer>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
