--- a/projects/brokenStage.html
+++ b/projects/brokenStage.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Broken Stage</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/cursor.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body class="project-page brokenStage">
@@ -42,7 +44,7 @@
 
 <main>
     <div class="container">
-        <div class="gallery">
+        <div class="cover-image">
             <img src="../assets/img/2-1.jpg" alt="Broken Stage image one">
         </div>
 
@@ -54,6 +56,7 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
+        <p>Click to view in details</p>
         <div class="gallery">
             <img src="../assets/img/2-2.jpg" alt="Broken Stage image two">
             <img src="../assets/img/2-3.jpg" alt="Broken Stage image three">
@@ -87,5 +90,15 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 
+    <footer class="footer">
+        <p>&copy; 2025 Yolanda Liu | All Rights Reserved</p>
+        <p class="footer-subheadings"><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
+        <p class="footer-subheadings">Contact</p>
+        <div class="footer-social">
+            <a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:yolandaliuxy@outlook.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+        </div>
+    </footer>
+<script src="../assets/js/main.js"></script>
 </body>
 </html>
