--- a/projects/brokenStage.html
+++ b/projects/brokenStage.html
@@ -92,8 +92,8 @@ document.addEventListener("DOMContentLoaded", function () {
 
     <footer class="footer">
         <p>&copy; 2025 Yolanda Liu | All Rights Reserved</p>
-        <p class="footer-subheadings"><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
-        <p class="footer-subheadings">Contact</p>
+        <p class="contact-text"><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
+        <p class="contact-text">Contact</p>
         <div class="footer-social">
             <a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
             <a href="mailto:yolandaliuxy@outlook.com" class="social-icon"><i class="fas fa-envelope"></i></a>
