--- a/projects/riverOfForgetting.html
+++ b/projects/riverOfForgetting.html
@@ -6,7 +6,7 @@
     <title>River of Forgetting</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/cursor.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body class="project-page riverOfForgetting">
@@ -93,7 +93,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
     <footer class="footer">
         <p>&copy; 2025 Yolanda Liu | All Rights Reserved</p>
-        <p><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
+        <p class="contact-text"><a href="https://drive.google.com/file/d/1VtxyaNnFvg7M4eTvH7OLGXI6QuSb3IWa/view?usp=sharing" target="_blank" rel="noopener noreferrer">View my Curriculum Vitae</a></p>
         <p class="contact-text">Contact</p>
         <div class="footer-social">
             <a href="https://www.linkedin.com/in/liu-xingyan-yolanda6" target="_blank" class="social-icon"><i class="fab fa-linkedin"></i></a>
